--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,4 +1,4 @@
-<!-- 레이아웃은 모든 템플릿이 상속해야 하는 템플릿 -->
+<!-- 레이아웃은 모든 템플릿이 상속해야 하는 템플릿이다 -->
 <!doctype html>
 <html lang="ko">
 <head>
@@ -12,8 +12,12 @@
     <title>Hello, sbb!</title>
 </head>
 <body>
+<!-- 네비게이션바 -->
+<nav th:replace="~{navbar :: navbarFragment}"></nav>
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 <th:block layout:fragment="content"></th:block>
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
+<!-- Bootstrap JS -->
+<script th:src="@{/bootstrap.min.js}"></script>
 </body>
 </html>
