--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -13,6 +13,10 @@
             <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
             <td>
                 <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+                <span th:if="${#lists.size(question.answerList) > 0}"
+                      th:text="${'[' + #lists.size(question.answerList) + ']'}"
+                      class="text-danger small ms-2">
+                </span>
             </td>
             <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
