사용자 이름, 닉네임 같이 받도록 수정

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
     <!-- sbb CSS -->
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
-    <title>Hello, sbb!</title>
+    <title>우리들의 놀이터, 광위키</title>
 </head>
 <body>
 <!-- 네비게이션바 -->
