--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -8,8 +8,8 @@
       </div>
     </div>
     <div class="mb-3">
-      <label for="nickname" class="form-label">닉네임</label>
-      <input type="text" name="nickname" id="nickname" class="form-control">
+      <label for="username" class="form-label">이름</label>
+      <input type="text" name="username" id="username" class="form-control">
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">비밀번호</label>
