--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -15,6 +15,10 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/user/signup}">회원가입</a>
                 </li>
+                <!-- 사용자 정보 표시 -->
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <span class="nav-link">현재 로그인한 사용자: <span th:text="${#authentication.name}"></span></span>
+                </li>
             </ul>
         </div>
     </div>
