--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
-    <!-- sbb CSS -->
+    <!-- wiki CSS -->
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
     <title>우리들의 놀이터, 광위키!</title>
 </head>
