--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -24,7 +24,7 @@
         <tr class="text-center" th:each="question, loop : ${paging}">
             <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
             <td class="text-start">
-                <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+                <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}" th:class="${#lists.size(question.voter) >= 5} ? 'hot-question' : ''"></a>
                 <span th:if="${#lists.size(question.answerList) > 0}"
                       th:text="${'[' + #lists.size(question.answerList) + ']'}"
                       class="text-danger small ms-2">
