관리자 이름 보라색 표시

--- a/src/main/resources/templates/patchnote_form.html
+++ b/src/main/resources/templates/patchnote_form.html
@@ -6,6 +6,20 @@
         <li>비밀번호 찾기 해보는중인데 생각보다 쉽진 않습니다 ... </li>
         <li>상단의 네비게이션 바의 UI를 수정하고, 간격을 조금 넓혔습니다.</li>
         <li>드디어!! 추천수 5개가 되면 불타오릅니다 !! 경 축 </li>
+        <li>관리자(panghwi)를 구별하기 위해 보라색으로 표시해놓았습니다 !</li>
+        <li></li>
+    </ol>
+
+    <h2>추가 예정</h2>
+    <ol>
+        <li>진짜 메모장으로 쓸 수 있게 마이페이지부터 만들 예정(일단은 내가 쓴 글을 보여줄 수 있게)</li>
+        <li>대댓글 기능(아마 조만간 가능함)</li>
+        <li>hot 게시판(가능)</li>
+        <li>사진 넣을 수 있다면 해볼 예정</li>
+        <li>게시판 나누기(카테고리화 - 자유게시판 비밀게시판 ... 가능)</li>
+        <li>조회수 추가하기</li>
+        <li>월별 글쓴 수 토대로 명예의 전당</li>
+        <li></li>
         <li></li>
     </ol>
 </div>
