--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -13,3 +13,8 @@
     0% { color: red; }
     100% { color: orange; } /* 빨간색에서 주황색으로 변하는 애니메이션 */
 }
+
+.purple-text {
+    color: #cb17cb;
+    font-weight: bold;
+}
