--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">
-                        <span th:if="${question.author != null}" th:text="${question.author.nickname}"></span>
+                        <span th:if="${question.author != null}" th:text="${question.author.nickname}" th:class="${question.author != null and question.author.nickname == 'panghwi'} ? 'purple-text' : ''"></span>
                     </div>
                     <div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">
-                        <span th:if="${answer.author != null}" th:text="${answer.author.nickname}"></span>
+                        <span th:if="${answer.author != null}" th:text="${answer.author.nickname}" th:class="${answer.author != null and answer.author.nickname == 'panghwi'} ? 'purple-text' : ''"></span>
                     </div>
                     <div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                 </div>
