--- a/src/main/resources/templates/patchnote_form.html
+++ b/src/main/resources/templates/patchnote_form.html
@@ -4,18 +4,18 @@
     <ol>
         <li>진짜 메모장으로 쓸 수 있게 마이페이지부터 만들 예정(일단은 내가 쓴 글을 보여줄 수 있게)</li>
         <li>대댓글 기능(아마 조만간 가능함)</li>
-        <li>hot 게시판(가능)</li>
         <li>사진 넣을 수 있다면 해볼 예정</li>
         <li>게시판 나누기(카테고리화 - 자유게시판 비밀게시판 ... 가능)</li>
         <li>조회수 추가하기</li>
         <li>월별 글쓴 수 토대로 명예의 전당</li>
+        <li>다음글 보기, 이전글 보기</li>
         <li></li>
         <li></li>
     </ol>
 
-    <h2>패치 노트 1.0.2 (2024.02..)</h2>
+    <h2>패치 노트 1.0.2 (2024.03.06.)</h2>
     <ol>
-        <li></li>
+        <li>드디어 핫게시판이 추가되었습니다! 실시간 인기글을 확인해보세요!!</li>
     </ol>
 
     <h2>패치 노트 1.0.1 (2024.02.24.)</h2>
