--- a/src/main/resources/templates/patchnote_form.html
+++ b/src/main/resources/templates/patchnote_form.html
@@ -1,21 +1,34 @@
+<!DOCTYPE html>
 <html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>패치 노트</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+</head>
+
+<body>
+<!-- 네비게이션바 -->
+<nav th:replace="~{navbar :: navbarFragment}"></nav>
+
 <div layout:fragment="content" class="container my-3">
     <h2>추가 예정</h2>
     <ol>
-        <li>진짜 메모장으로 쓸 수 있게 마이페이지부터 만들 예정(일단은 내가 쓴 글을 보여줄 수 있게)</li>
-        <li>대댓글 기능(아마 조만간 가능함)</li>
-        <li>사진 넣을 수 있다면 해볼 예정</li>
-        <li>게시판 나누기(카테고리화 - 자유게시판 비밀게시판 ... 가능)</li>
-        <li>조회수 추가하기</li>
-        <li>월별 글쓴 수 토대로 명예의 전당</li>
+        <li>카테고리 만들기</li>
+        <li>사진 넣기</li>
+        <li>마이페이지</li>
         <li>다음글 보기, 이전글 보기</li>
-        <li></li>
-        <li></li>
     </ol>
 
     <h2>패치 노트 1.0.2 (2024.03.06.)</h2>
     <ol>
         <li>드디어 핫게시판이 추가되었습니다! 실시간 인기글을 확인해보세요!!</li>
+        <li>광위키 UI를 대폭 수정하였습니다. 삐꾸난데 있으면 카톡바람.</li>
+        <li></li>
+        <li></li>
+        <li></li>
     </ol>
 
     <h2>패치 노트 1.0.1 (2024.02.24.)</h2>
@@ -26,5 +39,18 @@
         <li>드디어!! 추천수 5개가 되면 불타오릅니다 !! 경 축 </li>
         <li>관리자(panghwi)를 구별하기 위해 보라색으로 표시해놓았습니다 !</li>
     </ol>
+
+    <h4>안함!!ㅎ</h4>
+    <ol>
+        <li>대댓글</li>
+        <li>조회수 표시</li>
+        <li>월별 명예의 전당</li>
+        <li>비밀번호 찾기기능 -> Email연동 귀찮아서 못하겠습니다. 그냥 계정하나 더 만드세요 ㅎ</li>
+    </ol>
 </div>
+
+<!-- Bootstrap JS -->
+<script th:src="@{/bootstrap.min.js}"></script>
+</body>
+
 </html>
