패치노트 수정

--- a/src/main/resources/templates/patchnote_form.html
+++ b/src/main/resources/templates/patchnote_form.html
@@ -25,10 +25,8 @@
     <h2>패치 노트 1.0.2 (2024.03.06.)</h2>
     <ol>
         <li>드디어 핫게시판이 추가되었습니다! 실시간 인기글을 확인해보세요!!</li>
-        <li>광위키 UI를 대폭 수정하였습니다. 삐꾸난데 있으면 카톡바람.</li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>광위키 UI를 대폭 수정 완료!! 삐꾸난데 찾으면 카톡바람 ㅎ</li>
+        <li>추천 버그 수정 완료!!</li>
     </ol>
 
     <h2>패치 노트 1.0.1 (2024.02.24.)</h2>
