--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="mb-3">
-      <label for="username" class="form-label">이름</label>
+      <label for="username" class="form-label">ID</label>
       <input type="text" name="username" id="username" class="form-control">
     </div>
     <div class="mb-3">
